objects/Fraud_Check_Result_Details__c.object
<CustomObject>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Fraud_Occurred__c</fullName>
        <label>Date Fraud Occurred</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employment_Status__c</fullName>
        <label>Employment Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fraud_Check_Result__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fraud Check Result</label>
        <referenceTo>Fraud_Check_Result__c</referenceTo>
        <relationshipLabel>Fraud Check Result Details</relationshipLabel>
        <relationshipName>Fraud_Check_Result_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fraud_Subject_Role__c</fullName>
        <label>Fraud Subject Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fraud_Subject__c</fullName>
        <label>Fraud Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fraud_Type__c</fullName>
        <label>Fraud Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Isd_Employer_Phone_Details__c</fullName>
        <label>Isd Employer Phone Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Isd_Guarantor_Phone_Details__c</fullName>
        <label>Isd Guarantor Phone Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Isd_Phone_Details__c</fullName>
        <label>Isd Phone Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Isd_Referee_Phone_Details__c</fullName>
        <label>Isd Referee Phone Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Isd_Second_Phone_Details__c</fullName>
        <label>Isd Second Phone Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Passport_Country_Code__c</fullName>
        <label>Passport Country Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Area_Code_Employer_Phone_Details__c</fullName>
        <label>Phone Area Code Employer Phone Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Area_Code_Guarantor_Phone_Details__c</fullName>
        <label>Phone Area Code Guarantor Phone Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Area_Code_Phone_Details__c</fullName>
        <label>Phone Area Code Phone Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Area_Code_Referee_Phone_Details__c</fullName>
        <label>Phone Area Code Referee Phone Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Area_Code_Second_Phone_Details__c</fullName>
        <label>Phone Area Code Second Phone Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number_Employer_Phone_Details__c</fullName>
        <label>Phone Number Employer Phone Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number_Guarantor_Phone_Details__c</fullName>
        <label>Phone Number Guarantor Phone Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number_Phone_Details__c</fullName>
        <label>Phone Number Phone Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number_Referee_Phone_Details__c</fullName>
        <label>Phone Number Referee Phone Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number_Second_Phone_Details__c</fullName>
        <label>Phone Number Second Phone Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_Subscriber__c</fullName>
        <label>Reporting Subscriber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>employer__c</fullName>
        <label>employer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>employment__c</fullName>
        <label>employment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>occupation__c</fullName>
        <label>occupation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>passportNumber__c</fullName>
        <label>passportNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Fraud Check Result Details</label>
    <nameField>
        <label>Fraud Check Result Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fraud Check Result Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>